--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "handlebars": "^4.1.0",
     "mysql": "^2.16.0",
+    "nodemon": "^1.18.10",
     "request": "^2.88.0",
-    "nodemon": "^1.18.10"
+    "uuid": "^3.3.2"
   }
 }
